@@ -1,3 +1,7 @@
+* 2005-05-11 Jeremy Sanders <jeremy@jeremysanders.net>
+	- Make super and subscripts move further up and down
+	- Adjust alignment code to take account of above modification
+	
 * 2005-05-10 Jeremy Sanders <jeremy@jeremysanders.net>
 	- Fit dataset options now have drop down menus
 	- Added \font{fontname}{text} and \size{[+-]fontsize}{text} to
